# tauri-demo

./: .gitignore  README.md  UPDATELOG.md  index.html  package.json  splashscreen.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  updater.yml
scripts/: updater.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue
src/tests/: index.test.ts
